--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,62 @@
 body {
     background-color: black;
+    margin:0;
+}
+
+div.panes-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    display: grid;
+    justify-content: center;
+    align-content: center;
 }
 
 div.panes {
     position: absolute;
-    top: 100px;
-    left: 0;
-    perspective: 50vw;
-    width: 100vw;
-    height: 80vw;
-    display: grid;
-    overflow: hidden;
-    justify-self: center;
+    margin: 0;
+    transform: translateX(20vw) translateY(20vh) scale(2);
+    perspective-origin: 40vw 40vh;
+    perspective: 40vw;
+    width: 100%;
+    height: 100%;
 }
 
 div.pane {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vw;
+    width: 80vw;
+    height: 80vh;
     transition: transform 0.1s ease-out;
     opacity: 50%;
     box-sizing: border-box;
-    border: 20px solid #888;
+    border: 20px ridge #888;
     padding: 2em;
 }
 
 #pane1 {
     background-color: #26a;
     /* 前面 */
-    transform: rotateY(0deg) translateZ(-50vw);
+    transform: rotateY(0deg) translateZ(-40vw);
 }
 
 #pane2 {
     background-color: #a33;
     /* 右面 */
-    transform: rotateY(-90deg) translateZ(-50vw);
+    transform: rotateY(-90deg) translateZ(-40vw);
 }
 
 #pane3 {
-    background-color: #aaa;
+    background-color: #774;
     /* 背面 */
-    transform: rotateY(180deg) translateZ(-50vw);
+    transform: rotateY(180deg) translateZ(-40vw);
 }
 
 #pane4 {
-    background-color: #aa2;
+    background-color: #474;
     /* 左面 */
-    transform: rotateY(90deg) translateZ(-50vw);
+    transform: rotateY(90deg) translateZ(-40vw);
 }
 
 #pane5 {
