--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    margin:0;
+    margin: 0;
 }
 
 div.panes-container {
@@ -31,32 +31,36 @@ div.pane {
     transition: transform 0.1s ease-out;
     opacity: 50%;
     box-sizing: border-box;
-    border: 20px ridge #888;
     padding: 2em;
+    border: 0.5em outset;
 }
 
+/* 前面 */
 #pane1 {
-    background-color: #26a;
-    /* 前面 */
     transform: rotateY(0deg) translateZ(-40vw);
+    background-color: #26a;
+    border-color: #26a;
 }
 
+/* 右面 */
 #pane2 {
-    background-color: #a33;
-    /* 右面 */
     transform: rotateY(-90deg) translateZ(-40vw);
+    background-color: #933;
+    border-color: #933;
 }
 
+/* 背面 */
 #pane3 {
-    background-color: #774;
-    /* 背面 */
     transform: rotateY(180deg) translateZ(-40vw);
+    background-color: #774;
+    border-color: #774;
 }
 
+/* 左面 */
 #pane4 {
-    background-color: #474;
-    /* 左面 */
     transform: rotateY(90deg) translateZ(-40vw);
+    background-color: #474;
+    border-color: #474;
 }
 
 #pane5 {
