--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,37 @@ div.pane {
     background-color: lightyellow;
 }
 
-.buttons {
+div.guide {
     position: fixed;
-    width: 100%;
-    top: 1.5em;
-    column-gap: 1em;
-    transform: scale(1.5);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    z-index: 100;
+    top: 50%;
+    background: #fff2;
+    color: #0008;
+    width: 2.8em;
+    height: 3.6em;
+    display: grid;
+    place-content: center;
+    font-size: 3vh;
+    border-radius: 0.5em;
+    z-index: 1000;
+}
+#guideL {
+    left: 1em;
+}
+#guideR {
+    right: 1em;
+}
+
+.guide>span{
+    width: 1em;
+    height: 1em;
+    border: 0.25em solid;
+    border-left: 0;
+    border-bottom: 0;
+    box-sizing: border-box;
+}
+#guideL>span {
+    transform: translateX(25%) rotate(-135deg);
+}
+#guideR>span {
+    transform: translateX(-25%) rotate(45deg);
 }
