--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,9 @@ div.pane {
 div.guide {
     position: fixed;
     top: 50%;
-    background: #fff2;
-    color: #0008;
+    background: #ccc;
+    color: #333;
+    opacity: 0.2;
     width: 2.8em;
     height: 3.6em;
     display: grid;
@@ -82,6 +83,9 @@ div.guide {
     font-size: 3vh;
     border-radius: 0.5em;
     z-index: 1000;
+}
+div.guide:hover {
+    opacity: 0.5;
 }
 #guideL {
     left: 1em;
