containeerの自由度を上げた

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ div.pane.back {
     background-color: lightyellow;
 }
 
-.pane>.container {
+.pane .container {
     border: inset 0.4em;
     border-color: inherit;
     background: #fff4;
