--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ div.pane {
     top: 0;
     width: 80vw;
     height: 80vh;
+    display: grid;
+    justify-items: stretch;
     transition: transform 0.1s ease-out;
     opacity: 50%;
     box-sizing: border-box;
