--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,14 @@ div.pane {
     width: 80vw;
     height: 80vh;
     display: grid;
+    grid-template-rows: min-content 1fr min-content;
     justify-items: stretch;
     transition: transform 0.1s ease-out;
-    opacity: 50%;
+    opacity: 60%;
     box-sizing: border-box;
     padding: 0 2em;
     border: 0.8em outset;
-    overflow-y: auto;
+    color: #fff;
 }
 
 .pane .container {
@@ -42,14 +43,25 @@ div.pane {
     border-color: inherit;
     background: #fff4;
     margin: 0.5em;
-    padding: 0.5em;
+    padding: 0.5em 1em;
+    overflow-y: auto;
+    flex: 1;
 }
 
 .pane>.header {
     margin-top: 0;
+    height: min-content;
     text-align: center;
-    color: #000a;
+    color: #fffa;
     filter: drop-shadow(0 0 0.1em #0008);
+}
+
+.pane>.footer {
+    justify-self: end;
+    align-self: end;
+    height: min-content;
+    text-align: right;
+    color: #fffa;
 }
 
 div.pane.back {
@@ -147,18 +159,18 @@ a.twi-link {
 }
 
 
-.container.fit {
-    width: max-content;
+.container.container-fit {
+    width: min-content;
     height: min-content;
     display: inline-block;
+    text-align: center;
 }
 
-.container.flex {
+.container.container-flex {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
     gap: 0.5em;
     justify-items: center;
-
 }
