--- a/css/ots.css
+++ b/css/ots.css
@@ -166,7 +166,7 @@ div.otslayout {
     text-align: center;
 }
 
-.otslayout .container.container-flex {
+.otslayout .container.container-flex-row {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
