--- a/css/ots.css
+++ b/css/ots.css
@@ -158,19 +158,16 @@ div.otslayout {
     padding: 0.5em;
 }
 
-
-.otslayout .container.container-fit {
-    width: min-content;
-    height: min-content;
-    display: inline-block;
-    text-align: center;
+.otslayout h3 {
+    align-self: center;
 }
+
 
 .otslayout .container.container-flex-row {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
+    align-items: stretch;
+    text-align: center;
     gap: 0.5em;
     justify-items: center;
 }
