--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,16 @@ body {
     margin: 0;
 }
 
+div.introduction {
+    position: fixed;
+    color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: xx-large;
+}
+
+div.introduction .button {
+    font-size: 2em; /* Adjust the value as needed */
+}
